Integration test configuration